# nyc_taxi

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt
.astro/: config.yaml
dags/: nyc_taxi_dag.py
ingestion/: __init__.py  datalake_client.py  download_files.sh  send_remote.py
notebooks/raw/: raw_taxi_zone.ipynb  raw_yellow_tripdata.ipynb
notebooks/trusted/: tru_yellow_taxi_trip.ipynb
