[project]
name = "nyc-taxi"
version = "0.1.0"
description = ""
authors = [
    {name = "arthraw",email = "arthursallesandrade@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "apache-airflow (>=3.1.7,<4.0.0)",
    "databricks-sdk (<0.78.0)",
    "databricks-cli (>=0.18.0,<0.19.0)",
    "apache-airflow-providers-databricks (>=7.9.0,<8.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
apache-airflow = { version = "^3.2.1", python = ">=3.12,<3.15 || >3.15" }

[packages]
package-mode = false